--- a/index.html
+++ b/index.html
@@ -8,135 +8,152 @@
   <style>
     * { box-sizing: border-box; }
 
-    body{
-      margin:0;
+    body {
+      margin: 0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background:#f3f4f6;
-      color:#222;
+      background: #f3f4f6;
+      color: #222;
     }
 
     /* HEADER */
-    header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:14px 24px;
-      background:#d60000;
-      color:#fff;
-      box-shadow:0 2px 6px rgba(0,0,0,0.25);
-      position:sticky;
-      top:0;
-      z-index:10;
-    }
-    header img{ height:52px; }
-
-    .titles h1{
-      margin:0;
-      font-size:1.6rem;
-      font-weight:700;
-    }
-    .titles p{
-      margin:2px 0 0;
-      font-size:0.9rem;
-      opacity:0.95;
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 14px 24px;
+      background: #d60000;
+      color: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+      position: sticky;
+      top: 0;
+      z-index: 10;
     }
 
-    nav a{
-      color:white;
-      text-decoration:none;
-      font-weight:600;
-      padding:6px 12px;
-      border:1px solid rgba(255,255,255,0.7);
-      border-radius:999px;
-      transition:0.2s ease;
+    header img { height: 52px; }
+
+    .titles h1 {
+      margin: 0;
+      font-size: 1.6rem;
+      font-weight: 700;
     }
-    nav a:hover{
-      background:rgba(255,255,255,0.18);
+
+    .titles p {
+      margin: 2px 0 0;
+      font-size: 0.9rem;
+      opacity: 0.95;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      padding: 6px 12px;
+      border: 1px solid rgba(255,255,255,0.7);
+      border-radius: 999px;
+      transition: 0.2s ease;
+    }
+
+    nav a:hover {
+      background: rgba(255,255,255,0.18);
       transform: translateY(-1px);
-      box-shadow:0 2px 6px rgba(0,0,0,0.25);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
     }
 
     /* MAIN */
-    main{
-      max-width: 1200px;
+    main {
+      max-width: 1300px;
       margin: 26px auto 40px;
       padding: 0 16px 40px;
     }
 
-    .page-title{
-      margin:0 0 6px;
-      font-size:1.8rem;
-    }
-    .page-subtitle{
-      margin:0 0 18px;
-      color:#444;
-      font-size:1rem;
-    }
-
     /* GRID */
-    .grid{
-      display:grid;
-      grid-template-columns: repeat(3, minmax(0,1fr));
-      gap:14px;
-    }
-    @media (max-width: 1100px){
-      .grid{ grid-template-columns: repeat(2, minmax(0,1fr)); }
-    }
-    @media (max-width: 700px){
-      .grid{ grid-template-columns: 1fr; }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      gap: 18px;
     }
 
-    .card{
-      background:#fff;
-      border:1px solid #e1e4ea;
-      border-radius:14px;
-      box-shadow:0 3px 10px rgba(0,0,0,0.10);
-      padding:16px 16px 18px;
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
-      min-height: 210px;
+    @media (max-width: 1100px) {
+      .grid { grid-template-columns: repeat(3, 1fr); }
     }
-    .card:hover{
+
+    @media (max-width: 700px) {
+      .grid { grid-template-columns: repeat(2, 1fr); }
+    }
+
+    @media (max-width: 500px) {
+      .grid { grid-template-columns: 1fr; }
+    }
+
+    /* TARJETAS */
+    .card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 12px;
+      border: 1px solid #e1e4ea;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.10);
+      transition: transform .15s ease, box-shadow .15s ease, border-color .15s ease;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .card:hover {
       transform: translateY(-2px);
-      box-shadow:0 10px 22px rgba(0,0,0,0.14);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.18);
+      border-color: #d60000;
     }
 
-    .card h3{
-      margin:0;
-      font-size:1.15rem;
-      color:#d60000;
-    }
-    .card p{
-      margin:0;
-      font-size:0.95rem;
-      color:#374151;
-      line-height:1.3rem;
-      flex:1;
+    .card-header {
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
 
-    .actions{
-      margin-top:6px;
+    .card-header img { height: 24px; }
+
+    .card-header h2 {
+      font-size: 1.0rem;
+      margin: 0;
+      color: #d60000;
     }
 
-    .btn{
-      display:inline-block;
-      padding:9px 14px;
-      border-radius:10px;
-      font-weight:800;
-      text-decoration:none;
-      background:#d60000;
-      color:white;
-      transition: background 0.15s, transform 0.15s, box-shadow 0.15s;
+    .card-image {
+      width: 100%;
+      border-radius: 6px;
+      margin: 6px 0;
+      max-height: 80px;
+      object-fit: contain;
     }
-    .btn:hover{
-      background:#b40000;
+
+    .card p {
+      flex-grow: 1;
+      font-size: 0.88rem;
+      color: #444;
+      margin: 0 0 2px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 6px;
+      padding: 7px 9px;
+      text-align: center;
+      border-radius: 6px;
+      font-size: 0.88rem;
+      font-weight: 600;
+      background: #d60000;
+      color: #fff;
+      text-decoration: none;
+      transition: background 0.15s, transform 0.12s ease, box-shadow 0.12s ease;
+      box-shadow: 0 2px 5px rgba(214,0,0,0.3);
+    }
+
+    .btn:hover {
+      background: #b40000;
       transform: translateY(-1px);
-      box-shadow:0 6px 16px rgba(0,0,0,0.18);
+      box-shadow: 0 4px 9px rgba(180,0,0,0.35);
     }
 
-    /* FOOTER */
+    /* FOOTER (nuevo) */
     footer{
       background:#222;
       color:#f2f2f2;
@@ -152,7 +169,9 @@
       display:grid;
       grid-template-columns: 2fr 1.2fr 1.2fr;
       gap:16px;
+      align-items: start;
     }
+
     @media (max-width: 900px){
       .footer-inner{ grid-template-columns: 1fr; }
     }
@@ -164,18 +183,30 @@
       letter-spacing:0.03em;
       color:#fff;
     }
+
     .footer-col p{
-      margin:0 0 4px;
+      margin:0 0 6px;
       font-size:0.82rem;
       color:#e0e0e0;
       line-height:1.2rem;
     }
+
     .footer-col a{
       color:#ffdddd;
       text-decoration:none;
       font-size:0.82rem;
     }
     .footer-col a:hover{ text-decoration:underline; }
+
+    .contact-grid{
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+    }
+
+    @media (max-width: 900px){
+      .contact-grid{ grid-template-columns: 1fr; }
+    }
 
     .footer-bottom{
       max-width:1300px;
@@ -207,134 +238,199 @@
 
 <body>
 
-<header>
-  <div style="display:flex; align-items:center; gap:16px;">
-    <img src="img/feccooex.png" alt="FECCOOEx">
-    <div class="titles">
-      <h1>Herramientas FECCOOEx</h1>
-      <p>Recursos públicos y sindicales para la comunidad educativa</p>
-    </div>
-  </div>
-
-  <nav>
-    <a href="delegados.html">Área delegados/as</a>
-  </nav>
-</header>
-
-<main>
-  <h1 class="page-title">Herramientas sindicales</h1>
-  <p class="page-subtitle">
-    Recursos digitales de apoyo para el personal del ámbito educativo en Extremadura.
-  </p>
-
-  <section class="grid">
-
-    <article class="card">
-      <h3>Consultas sindicales</h3>
-      <p>Formulario privado para consultas laborales, administrativas o sindicales.</p>
-      <div class="actions">
-        <a class="btn" href="consultas.html">Abrir formulario</a>
+  <!-- HEADER -->
+  <header>
+    <div style="display:flex; align-items:center; gap:16px;">
+      <img src="img/feccooex.png" alt="FECCOOEx">
+      <div class="titles">
+        <h1>Herramientas FECCOOEx</h1>
+        <p>Recursos públicos y sindicales para la comunidad educativa</p>
       </div>
-    </article>
-
-    <article class="card">
-      <h3>Chat público</h3>
-      <p>Espacio abierto para consultas breves y orientación general (no inmediato).</p>
-      <div class="actions">
-        <a class="btn" href="chat.html">Entrar al chat</a>
-      </div>
-    </article>
-
-    <article class="card">
-      <h3>Guías prácticas</h3>
-      <p>Documentos orientativos sobre permisos, jornada, interinos y derechos laborales.</p>
-      <div class="actions">
-        <a class="btn" href="guias.html">Ver guías</a>
-      </div>
-    </article>
-
-    <article class="card">
-      <h3>Publicaciones sindicales</h3>
-      <p>Comunicados, informes y materiales elaborados por la Federación.</p>
-      <div class="actions">
-        <a class="btn" href="publicaciones.html">Ver publicaciones</a>
-      </div>
-    </article>
-
-    <article class="card">
-      <h3>Normativa</h3>
-      <p>Acceso organizado a normativa educativa y laboral relevante.</p>
-      <div class="actions">
-        <a class="btn" href="normativa.html">Consultar normativa</a>
-      </div>
-    </article>
-
-    <article class="card">
-      <h3>Calendarios</h3>
-      <p>Calendario escolar y laboral de Extremadura con festivos locales.</p>
-      <div class="actions">
-        <a class="btn" href="calendarios.html">Ver calendarios</a>
-      </div>
-    </article>
-
-    <article class="card">
-      <h3>Calculadoras</h3>
-      <p>Herramientas de cálculo: baremo de interinos, traslados, retribuciones, jubilación.</p>
-      <div class="actions">
-        <a class="btn" href="calculadoras.html">Abrir calculadoras</a>
-      </div>
-    </article>
-
-  </section>
-</main>
-
-<footer>
-  <div class="footer-inner">
-    <div class="footer-col">
-      <h3>Contacto</h3>
-      <p><strong>Dirección:</strong><br>
-        Avenida Juan Carlos I, nº 47<br>
-        CP 06800 · Mérida (Extremadura)
-      </p>
-      <p><strong>Correo:</strong>
-        <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a>
-      </p>
     </div>
 
-    <div class="footer-col">
-      <h3>Teléfonos</h3>
-      <p>Badajoz: 924 224 104</p>
-      <p>Cáceres: 927 223 534</p>
-      <p>Mérida: 924 330 018</p>
-      <p>Plasencia: 927 424 086</p>
-      <p>Don Benito: 924 802 080</p>
-      <p>Zafra: 924 553 202</p>
+    <nav>
+      <a href="delegados.html">Área delegados/as</a>
+    </nav>
+  </header>
+
+  <!-- CONTENIDO PRINCIPAL -->
+  <main>
+
+    <div class="grid">
+
+      <!-- 1. CENTROS -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Centros educativos</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/centros.png" alt="Centros">
+        <p>Consulta interactiva de centros de Extremadura con filtros y mapa.</p>
+        <a class="btn" href="centros.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 2. NORMATIVA -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Normativa</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/normativa.png" alt="Normativa">
+        <p>Buscador de normativa por temática, nivel y palabras clave.</p>
+        <a class="btn" href="normativa.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 3. CALENDARIOS -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Calendarios</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/calendario.png" alt="Calendarios">
+        <p>Calendario escolar y laboral de Extremadura con festivos locales.</p>
+        <a class="btn" href="calendario.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 4. CONSULTAS -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Consultas</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/consultas.png" alt="Consultas">
+        <p>Canal para enviar consultas laborales y sindicales (privado).</p>
+        <a class="btn" href="consultas.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 5. CHAT -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Chat en línea</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/chats.png" alt="Chat">
+        <p>Chat público para dudas breves (no inmediato).</p>
+        <a class="btn" href="chat.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 6. GUÍAS -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Guías sindicales</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/guias.png" alt="Guías">
+        <p>Guías prácticas: permisos, jornada, interinos y más.</p>
+        <a class="btn" href="guias.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 7. PUBLICACIONES -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Publicaciones</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/publicaciones.png" alt="Publicaciones">
+        <p>Comunicados, informes y materiales sindicales seleccionados.</p>
+        <a class="btn" href="publicaciones.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 8. CALCULADORAS (OJO: plural + enlace correcto) -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Calculadoras</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
+        <p>Baremos, traslados, retribuciones, jubilación y más.</p>
+        <a class="btn" href="calculadoras.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 9. CONTACTOS -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Contactos</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/contactos.png" alt="Contactos">
+        <p>Datos de contacto y sedes (próximamente ampliado).</p>
+        <a class="btn" href="contactos.html">Abrir herramienta</a>
+      </article>
+
+      <!-- 10. AFILIACIÓN -->
+      <article class="card">
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Afiliación</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/afiliacion.png" alt="Afiliación">
+        <p>Ventajas e información sobre afiliación (próximamente).</p>
+        <a class="btn" href="afiliacion.html">Abrir herramienta</a>
+      </article>
+
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="footer-inner">
+
+      <div class="footer-col">
+        <h3>Contacto</h3>
+
+        <div class="contact-grid">
+          <div>
+            <p><strong>Dirección:</strong><br>
+              Avenida Juan Carlos I, núm. 47<br>
+              CP 06800 · Mérida (Extremadura)
+            </p>
+            <p><strong>Correo:</strong>
+              <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a>
+            </p>
+          </div>
+
+          <div>
+            <p><strong>Teléfonos por sede:</strong></p>
+            <p>Badajoz: 924224104</p>
+            <p>Cáceres: 927223534</p>
+            <p>Mérida: 924330018</p>
+            <p>Plasencia: 927424086</p>
+            <p>Don Benito: 924802080</p>
+            <p>Zafra: 924553202</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-col">
+        <h3>Enlaces rápidos</h3>
+        <p><a href="https://extremadura.fe.ccoo.es/" target="_blank" rel="noopener noreferrer">Web FECCOOExtremadura</a></p>
+        <p><a href="https://www.facebook.com/feccooex" target="_blank" rel="noopener noreferrer">Facebook FECCOOEx</a></p>
+        <p><a href="https://x.com/FECCOOex" target="_blank" rel="noopener noreferrer">X (Twitter) FECCOOEx</a></p>
+        <p><a href="https://www.instagram.com/feccooex" target="_blank" rel="noopener noreferrer">Instagram FECCOOEx</a></p>
+        <p><a href="https://t.me/feccooextremadura" target="_blank" rel="noopener noreferrer">Canal de Telegram FECCOOExtremadura</a></p>
+      </div>
+
+      <div class="footer-col">
+        <h3>Licencia</h3>
+        <p>Este contenido se comparte bajo licencia Creative Commons BY-ND 4.0.</p>
+      </div>
+
     </div>
 
-    <div class="footer-col">
-      <h3>Enlaces rápidos</h3>
-      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank">Web FECCOOExtremadura</a></p>
-      <p><a href="https://www.facebook.com/feccooex" target="_blank">Facebook</a></p>
-      <p><a href="https://x.com/FECCOOex" target="_blank">X (Twitter)</a></p>
-      <p><a href="https://www.instagram.com/feccooex" target="_blank">Instagram</a></p>
-      <p><a href="https://t.me/feccooextremadura" target="_blank">Telegram</a></p>
+    <div class="footer-bottom">
+      <div class="footer-bottom-left">
+        <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
+        <span>Contenido bajo licencia Creative Commons BY-ND 4.0 (se permite compartir sin modificaciones y con atribución).</span>
+      </div>
+      <div class="footer-bottom-right">
+        © <span id="anio-footer"></span> Federación de Enseñanza de CCOO de Extremadura
+      </div>
     </div>
-  </div>
 
-  <div class="footer-bottom">
-    <div class="footer-bottom-left">
-      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
-      <span>Contenido bajo licencia Creative Commons BY-ND 4.0.</span>
-    </div>
-    <div class="footer-bottom-right">
-      © <span id="anio"></span> Federación de Enseñanza de CCOO de Extremadura
-    </div>
-  </div>
-</footer>
-
-<script>
-  document.getElementById("anio").textContent = new Date().getFullYear();
-</script>
+    <script>
+      document.getElementById('anio-footer').textContent = new Date().getFullYear();
+    </script>
+  </footer>
 
 </body>
 </html>
