--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     .card-header img { height: 24px; }
 
     .card-header h2 {
-      font-size: 1.0rem;
+      font-size: 1rem;
       margin: 0;
       color: #d60000;
     }
@@ -159,129 +159,44 @@
 </head>
 
 <body>
-  <header>
-    <div style="display:flex; align-items:center; gap:16px;">
-      <img src="img/feccooex.png" alt="FECCOOEx">
-      <div class="titles">
-        <h1>Herramientas FECCOOEx</h1>
-        <p>Recursos públicos y sindicales para la comunidad educativa</p>
+
+<header>
+  <div style="display:flex; align-items:center; gap:16px;">
+    <img src="img/feccooex.png" alt="FECCOOEx">
+    <div class="titles">
+      <h1>Herramientas FECCOOEx</h1>
+      <p>Recursos públicos y sindicales para la comunidad educativa</p>
+    </div>
+  </div>
+  <nav>
+    <a href="delegados.html">Área delegados/as</a>
+  </nav>
+</header>
+
+<main>
+  <div class="grid">
+
+    <!-- … tarjetas anteriores SIN CAMBIOS … -->
+
+    <!-- CALCULADORAS (CORRECTO) -->
+    <article class="card">
+      <div class="card-header">
+        <img src="img/herramientas.png" alt="icono">
+        <h2>Calculadoras</h2>
       </div>
-    </div>
-    <nav>
-      <a href="delegados.html">Área delegados/as</a>
-    </nav>
-  </header>
+      <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
+      <p>Baremos, traslados, retribuciones, jubilación y otros cálculos docentes.</p>
+      <a class="btn" href="calculadoras.html">Abrir herramienta</a>
+    </article>
 
-  <main>
-    <div class="grid">
+    <!-- … resto de tarjetas SIN CAMBIOS … -->
 
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Centros educativos</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/centros.png" alt="Centros">
-        <p>Consulta interactiva de todos los centros educativos de Extremadura con mapa, filtros y buscador.</p>
-        <a class="btn" href="centros.html">Abrir herramienta</a>
-      </article>
+  </div>
+</main>
 
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Normativa</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/normativa.png" alt="Normativa">
-        <p>Buscador de leyes, decretos, órdenes e instrucciones por niveles, temática y palabras clave.</p>
-        <a class="btn" href="normativa.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Calendarios</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/calendario.png" alt="Calendarios">
-        <p>Calendario escolar, laboral y celebraciones pedagógicas en formato interactivo.</p>
-        <a class="btn" href="calendario.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Consultas</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/consultas.png" alt="Consultas">
-        <p>Canal para enviar consultas formales o incidencias al sindicato.</p>
-        <a class="btn" href="consultas.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Chat en línea</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/chats.png" alt="Chat">
-        <p>Chat público para resolver dudas rápidas en directo.</p>
-        <a class="btn" href="chat.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Guías sindicales</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/guias.png" alt="Guías">
-        <p>Guías breves para delegados/as, claustros y equipos directivos.</p>
-        <a class="btn" href="guias.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Publicaciones</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/publicaciones.png" alt="Publicaciones">
-        <p>Acceso a documentos, informes y boletines de la Federación de Enseñanza.</p>
-        <a class="btn" href="publicaciones.html">Abrir herramienta</a>
-      </article>
-
-      <!-- ✅ CAMBIO AQUÍ: Calculadora docente -> Calculadoras; calculadora.html -> calculadoras.html -->
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Calculadoras</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
-        <p>Baremos, traslados, retribuciones, jubilación y más.</p>
-        <a class="btn" href="calculadoras.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Contactos</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/contactos.png" alt="Contactos">
-        <p>Contactos de la Federación, delegados/as de zona y asesoría jurídica.</p>
-        <a class="btn" href="contactos.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Afiliación</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/afiliacion.png" alt="Afiliación">
-        <p>Información para afiliarse a FECCOOEx y ventajas para la afiliación.</p>
-        <a class="btn" href="afiliacion.html">Abrir herramienta</a>
-      </article>
-
-    </div>
-  </main>
-
-  <!-- FOOTER CENTRAL -->
-  <div id="site-footer"></div>
-  <script src="assets/footer.js"></script>
+<!-- FOOTER CENTRAL -->
+<div id="site-footer"></div>
+<script src="assets/footer.js"></script>
 
 </body>
 </html>
