--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
       <article class="card">
         <div class="card-header">
           <img src="img/herramientas.png" alt="icono">
-          <h2>Calculadora docente</h2>
+          <h2>Calculadoras </h2>
         </div>
-        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadora">
+        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
         <p>Herramienta para cálculos rápidos: horas lectivas, cupos, reducciones y más.</p>
-        <a class="btn" href="calculadora.html">Abrir herramienta</a>
+        <a class="btn" href="calculadoras.html">Abrir herramienta</a>
       </article>
 
       <article class="card">
@@ -284,3 +284,4 @@
 
 </body>
 </html>
+
