--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
       <article class="card">
         <div class="card-header">
           <img src="img/herramientas.png" alt="icono">
-          <h2>Calculadoras </h2>
+          <h2>Calculadora </h2>
         </div>
-        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
+        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadora">
         <p>Herramienta para cálculos rápidos: horas lectivas, cupos, reducciones y más.</p>
         <a class="btn" href="calculadoras.html">Abrir herramienta</a>
       </article>
@@ -284,4 +284,5 @@
 
 </body>
 </html>
+
 
