--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
       </article>
 
       <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Calculadora </h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadora">
-        <p>Herramienta para cálculos rápidos: horas lectivas, cupos, reducciones y más.</p>
-        <a class="btn" href="calculadoras.html">Abrir herramienta</a>
-      </article>
+  <div class="card-header">
+    <img src="img/herramientas.png" alt="icono">
+    <h2>Calculadoras</h2>
+  </div>
+  <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
+  <p>Baremos, traslados, retribuciones, jubilación y más.</p>
+  <a class="btn" href="calculadoras/">Abrir herramienta</a>
+</article>
 
       <article class="card">
         <div class="card-header">
@@ -284,5 +284,6 @@
 
 </body>
 </html>
+
 
 
