--- a/index.html
+++ b/index.html
@@ -245,15 +245,16 @@
         <a class="btn" href="publicaciones.html">Abrir herramienta</a>
       </article>
 
+      <!-- ✅ Calculadoras (plural) -->
       <article class="card">
-  <div class="card-header">
-    <img src="img/herramientas.png" alt="icono">
-    <h2>Calculadoras</h2>
-  </div>
-  <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
-  <p>Baremos, traslados, retribuciones, jubilación y más.</p>
-  <a class="btn" href="calculadoras/">Abrir herramienta</a>
-</article>
+        <div class="card-header">
+          <img src="img/herramientas.png" alt="icono">
+          <h2>Calculadoras</h2>
+        </div>
+        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
+        <p>Baremos, traslados, retribuciones, jubilación y más.</p>
+        <a class="btn" href="./calculadoras/">Abrir herramienta</a>
+      </article>
 
       <article class="card">
         <div class="card-header">
@@ -280,10 +281,8 @@
 
   <!-- FOOTER CENTRAL -->
   <div id="site-footer"></div>
-  <script src="assets/footer.js"></script>
+  <!-- cache-bust para evitar footer.js viejo en navegador -->
+  <script src="assets/footer.js?v=1"></script>
 
 </body>
 </html>
-
-
-
